#include <vis_primitives.h>
#include <vis_stream.h>

#include <atomic>
#include <chrono>
#include <cmath>
#include <csignal>
#include <iostream>
#include <random>
#include <thread>
#include <vector>

#include "visualization.pb.h"

std::atomic<bool> g_running(true);

void signal_handler(int signum) {
  std::cout << "\nInterrupt signal (" << signum
            << ") received. Shutting down..." << std::endl;
  g_running = false;
}

void sleep_ms(int milliseconds) {
  std::this_thread::sleep_for(std::chrono::milliseconds(milliseconds));
}

Vis::MaterialProps create_random_material(const std::string& legend = "") {
  static std::random_device rd;
  static std::mt19937 gen(rd());
  static std::uniform_real_distribution<float> dist(0.0f, 1.0f);

  Vis::MaterialProps mat;
  mat.color = Vis::ColorRGBA(dist(gen), dist(gen), dist(gen));
  mat.point_size = 5.0f + dist(gen) * 10.0f;
  mat.line_width = 1.0f + dist(gen) * 3.0f;
  mat.legend = legend;

  static std::vector<Vis::MaterialProps::PointShape> shapes = {
      Vis::MaterialProps::PointShape::SQUARE,
      Vis::MaterialProps::PointShape::CIRCLE,
      Vis::MaterialProps::PointShape::CROSS,
      Vis::MaterialProps::PointShape::DIAMOND};
  mat.point_shape = (shapes[std::uniform_int_distribution<>(0, 3)(gen)]);

  static std::vector<Vis::MaterialProps::LineStyle> line_styles = {
      Vis::MaterialProps::LineStyle::SOLID,
      Vis::MaterialProps::LineStyle::DASHED,
      Vis::MaterialProps::LineStyle::DOTTED};
  mat.line_style = (line_styles[std::uniform_int_distribution<>(0, 2)(gen)]);

  return mat;
}

class ObjectManagementDemo {
 private:
  VisualizationServer& server;
  const std::string window_name = "ÂØπË±°ÁÆ°ÁêÜÊºîÁ§∫";

 public:
  ObjectManagementDemo(VisualizationServer& srv) : server(srv) {}

  void run() {
    std::cout << "\nüìä ÂØπË±°ÁÆ°ÁêÜÊìç‰ΩúÊºîÁ§∫" << std::endl;
    std::cout << "Êåâ Ctrl+C ÂÅúÊ≠¢ÊºîÁ§∫" << std::endl;

    // Ê∏ÖÁêÜÁé∞ÊúâÁ™óÂè£
    cleanup_all_windows();

    server.create_window(window_name, false);
    sleep_ms(500);

    // ÂºÄÂêØËá™Âä®Êõ¥Êñ∞Á≠ñÁï•ÔºåÁ°Æ‰øùÊìç‰ΩúËÉΩÂèäÊó∂ÂèëÈÄÅÂà∞ÂâçÁ´Ø
    server.set_auto_update_policy(true, 2, 50);

    // Èò∂ÊÆµ1: Ê∑ªÂä†Â§ö‰∏™ÂØπË±°
    add_multiple_objects();

    // Èò∂ÊÆµ2: Ê∏ÖÈô§Âä®ÊÄÅÂØπË±°
    clear_dynamic_objects();

    // Èò∂ÊÆµ3: ÈáçÊñ∞Ê∑ªÂä†ÂØπË±°
    readd_objects();

    // Èò∂ÊÆµ4: Ê∏ÖÈô§ÊâÄÊúâÂØπË±°
    clear_all_objects();

    // ÂÖ≥Èó≠Ëá™Âä®Êõ¥Êñ∞
    server.set_auto_update_policy(false);

    std::cout << "ÊºîÁ§∫ÁªìÊùü" << std::endl;
  }

 private:
  void cleanup_all_windows() {
    std::cout << "Ê∏ÖÁêÜÁé∞ÊúâÁ™óÂè£..." << std::endl;
    auto windows_2d = server.get_window_names(false);
    auto windows_3d = server.get_window_names(true);

    for (const auto& win : windows_2d) {
      server.remove_window(win, false);
    }
    for (const auto& win : windows_3d) {
      server.remove_window(win, true);
    }
    sleep_ms(1000);
  }

  void add_multiple_objects() {
    std::cout << "Ê∑ªÂä†Â§ö‰∏™ÂØπË±°..." << std::endl;

    // ÂàõÂª∫Âπ∂Ê∑ªÂä†ÂØπË±°ÔºåËÆ©ÂÆÉ‰ª¨‰øùÊåÅ‰ΩúÁî®Âüü
    std::vector<std::shared_ptr<Vis::Observable>> objects;

    for (int i = 0; i < 6; ++i) {
      float x = -3.0f + 1.2f * i;
      auto point = Vis::Point2D::create({x, 0.0f});
      server.add(point, window_name,
                 create_random_material("ÂØπË±°" + std::to_string(i + 1)), false);
      objects.push_back(point);  // ‰øùÊåÅÂØπË±°ÂºïÁî®ÔºåÈò≤Ê≠¢ÊûêÊûÑ
      sleep_ms(300);
    }

    // Á≠âÂæÖ‰∏Ä‰∏ãËÆ©ÊâÄÊúâÂØπË±°ÈÉΩÊòæÁ§∫Âá∫Êù•
    sleep_ms(1000);
    std::cout << "ÂØπË±°ÊÄªÊï∞: " << server.get_observables_number() << std::endl;
    sleep_ms(2000);

    // Ê≥®ÊÑèÔºöobjects Á¶ªÂºÄ‰ΩúÁî®ÂüüÊó∂‰ºöÊûêÊûÑÔºå‰ΩÜÊúçÂä°Âô®Â∫îËØ•Â∑≤ÁªèÂ§çÂà∂‰∫ÜÂØπË±°Êï∞ÊçÆ
  }

  void clear_dynamic_objects() {
    std::cout << "Ê∏ÖÈô§Âä®ÊÄÅÂØπË±°..." << std::endl;

    // ‰ΩøÁî® clear_dynamic Ê∏ÖÈô§Âä®ÊÄÅÂØπË±°
    server.clear_dynamic(window_name, false);

    // Á≠âÂæÖÊ∏ÖÈô§Êìç‰ΩúÁîüÊïà
    sleep_ms(1500);
    std::cout << "Ê∏ÖÈô§Âä®ÊÄÅÂØπË±°ÂêéÂØπË±°Êï∞: " << server.get_observables_number()
              << std::endl;
  }

  void readd_objects() {
    std::cout << "ÈáçÊñ∞Ê∑ªÂä†ÂØπË±°..." << std::endl;

    // ÈáçÊñ∞ÂàõÂª∫‰∏Ä‰∫õÂØπË±°
    std::vector<std::shared_ptr<Vis::Observable>> new_objects;

    for (int i = 0; i < 4; ++i) {
      float x = -2.0f + i * 1.0f;
      auto circle = Vis::Circle::create({x, 1.0f}, 0.3f);
      server.add(circle, window_name,
                 create_random_material("Êñ∞ÂØπË±°" + std::to_string(i + 1)),
                 false);
      new_objects.push_back(circle);  // ‰øùÊåÅÂØπË±°ÂºïÁî®
      sleep_ms(500);
    }

    // Á≠âÂæÖÊñ∞ÂØπË±°ÊòæÁ§∫
    sleep_ms(1000);
    std::cout << "ÈáçÊñ∞Ê∑ªÂä†ÂêéÂØπË±°Êï∞: " << server.get_observables_number()
              << std::endl;
    sleep_ms(2000);
  }

  void clear_all_objects() {
    std::cout << "Ê∏ÖÈô§ÊâÄÊúâÂØπË±°..." << std::endl;

    // ‰ΩøÁî® clear Ê∏ÖÈô§ÊâÄÊúâÂØπË±°
    server.clear(window_name, false);

    // Á≠âÂæÖÊ∏ÖÈô§Êìç‰ΩúÁîüÊïà
    sleep_ms(1500);
    std::cout << "ÊúÄÁªàÂØπË±°Êï∞: " << server.get_observables_number() << std::endl;
    sleep_ms(2000);
  }
};

int main() {
  signal(SIGINT, signal_handler);

  try {
    VisualizationServer::init(9002);
    auto& server = VisualizationServer::get();
    server.run();

    std::cout << "ÊúçÂä°Âô®Â∑≤ÂêØÂä®ÔºåÁ≠âÂæÖÂÆ¢Êà∑Á´ØËøûÊé•..." << std::endl;
    while (g_running && !server.is_connected()) {
      sleep_ms(100);
    }

    if (!g_running) {
      server.stop();
      return 0;
    }

    std::cout << "ÂÆ¢Êà∑Á´ØÂ∑≤ËøûÊé•ÔºåÂºÄÂßãÊºîÁ§∫..." << std::endl;

    ObjectManagementDemo demo(server);
    demo.run();

    // ‰øùÊåÅËøêË°åÁõ¥Âà∞Ctrl+C
    while (g_running) {
      sleep_ms(1000);
    }

    server.stop();
    std::cout << "ÊúçÂä°Âô®Â∑≤ÂÅúÊ≠¢" << std::endl;

  } catch (const std::exception& e) {
    std::cerr << "ÂèëÁîüÂºÇÂ∏∏: " << e.what() << std::endl;
    return 1;
  }
  return 0;
}